# mpv-history-daemon

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
mpv_history_daemon/: __main__.py  daemon.py  events.py  merge.py  utils.py
