[project]
name = "mpv_history_daemon"
version = "0.2.6"
description = "Daemon which connects to active mpv instances, saving a history of what I watch/listen to"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1",
  "logzero",
  "python-mpv-jsonipc",
  "simplejson",
  "kompress",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
mpv-history-daemon = "mpv_history_daemon.__main__:cli"

[project.urls]
Homepage = "https://github.com/purarue/mpv_history_daemon"

[project.optional-dependencies]
optional = ["orjson"]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = true
disallow_any_generics = false
show_error_context = true
show_error_codes = true
namespace_packages = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_calls = true

[tool.setuptools.packages.find]
include = ["mpv_history_daemon"]
